# plapper

./: .gitignore  README.md
.github/workflows/: app.yml  core.yml  release.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/dev/plapper/plapper/: MainActivity.kt
app/android/app/src/main/kotlin/dev/plounter/plounter/: MainActivity.kt
app/ios/: Podfile
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  palette.dart  plapper_ffi.dart  plounter_ffi.dart
app/lib/features/: challenge.dart  discord_rpc.dart  goal.dart  history.dart  replay.dart  sound_ffi.dart
app/linux/: CMakeLists.txt
app/linux/flutter/: generated_plugins.cmake
app/linux/runner/: my_application.cc
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
core/: CMakeLists.txt
core/capture/: capture.cpp
core/include/plapper/: plapper.h  plapper_capture.h  plapper_sound.h
core/include/plounter/: plounter.h  plounter_capture.h
core/src/: detector.cpp  detector.hpp  plapper.cpp  plounter.cpp  sound.cpp
core/tests/: test_detector.cpp
core/tools/: diag.cpp  gen_chimes.py
fixtures/: README.md
installer/: windows.nsi
